Fix text-wrap in modal btn

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -93,4 +93,5 @@
   position: absolute;
   letter-spacing: -0.04em;
   z-index: 100;
+  white-space: nowrap;
 }
